# Parabola-Render-Engine

./: .gitignore  CMakeLists.txt  Parabola Engine.sln  README.md  StructLayoutSettings.json  project.cap
.github/workflows/: main.yml
AlkyoneRenderEngine/: AlkyoneRenderEngine.vcxproj  AlkyoneRenderEngine.vcxproj.filters  CMakeLists.txt  CustomTypes.natvis  log.logfile  test.fbx  test.ini
AlkyoneRenderEngine/Assets/: SnowTerrain.mtl  cube2mat.fbx  cubetest.fbx  lucy.fbx  metallic-lucy-statue-stanford-scan.fbx  plane.fbx  planeAscii.fbx  random.fbx  shere.fbx  torus.fbx  tri.fbx  triangle.fbx
AlkyoneRenderEngine/Assets/.mayaSwatches/: 686.jpg_hcm.swatch
AlkyoneRenderEngine/Assets/city test/: city.fbx  city.mtl  city2.mtl  city_big_1.mtl
AlkyoneRenderEngine/Assets/scene/: untitled.mtl
AlkyoneRenderEngine/Assets/sponza/: sponza.mtl  sponza_pbr.mtl
AlkyoneRenderEngine/Assets/sponza/.mayaSwatches/: 6772804448157695701.jpg_hcm.swatch
AlkyoneRenderEngine/Assets/textures/.mayaSwatches/: background.tga_hcm.swatch  chain_texture.tga_hcm.swatch  lion.tga_hcm.swatch  spnza_bricks_a_diff.tga_hcm.swatch  sponza_arch_diff.tga_hcm.swatch  sponza_ceiling_a_diff.tga_hcm.swatch  sponza_column_a_diff.tga_hcm.swatch  sponza_column_b_diff.tga_hcm.swatch  sponza_column_c_diff.tga_hcm.swatch  sponza_details_diff.tga_hcm.swatch  sponza_fabric_blue_diff.tga_hcm.swatch  sponza_fabric_diff.tga_hcm.swatch  sponza_fabric_green_diff.tga_hcm.swatch  sponza_flagpole_diff.tga_hcm.swatch  sponza_floor_a_diff.tga_hcm.swatch  sponza_roof_diff.tga_hcm.swatch  sponza_thorn_diff.tga_hcm.swatch  uvtest.png_hcm.swatch  vase_dif.tga_hcm.swatch  vase_hanging.tga_hcm.swatch  vase_plant.tga_hcm.swatch  vase_round.tga_hcm.swatch
AlkyoneRenderEngine/Dependencies/Includes/Public/: FBXImporter.h  FileUtilities.h  Input.h  Object.h  RenderHelper.h  Shader_.h  Shader__.h  Text.h  Typedefs.h  Utilities.h  VertexFormat.h  camera.h
AlkyoneRenderEngine/Dependencies/Includes/TPP/: ConstructorHelperClass.tpp
AlkyoneRenderEngine/Dependencies/Libraries/: freetype.lib  freetyped.lib  git2.lib  glew32d.lib  libglew32.lib  libglew32d.lib  mathd.lib
AlkyoneRenderEngine/Shaders/: ButtonFragShader.fs  TextFragShader.fs  brdf_shading.frag  brdf_shading.vert  buttonVertexShader.vs  cascade_debug.frag  cascade_debug.vert  colour.frag  depth.frag  depth.vert  hbaoOutput.frag  lamp.fs  lamp.vs  lightshader.fs  linearDepth.frag  material.fs  position.vert  reconstructNormal.frag  simpleFrag.frag  simpleVertex.vert  skybox.frag  skybox.vert  ssaoBlur.frag  ssaoInput.frag  ssaoOutput.frag  ssaoOutput.vert  vertexshader.vs
AlkyoneRenderEngine/Source/: Input.cpp  Object.cpp  Text.cpp  main.cpp
AlkyoneRenderEngine/Source/Components/: AmbientOcclusion.cpp  BoundingBox.cpp  Camera.cpp  CascadeShadowMap.cpp  Clock.cpp  Components.cpp  FBORenderTarget.cpp  Lights.cpp  Material.cpp  Model.cpp  Node.cpp  Octree.cpp  OctreeNode.cpp  RenderActor.cpp  RenderTarget.cpp  RenderWindow.cpp  Scene.cpp  SceneNode.cpp  Shader.cpp  SkyBox.cpp  StaticMesh.cpp  Texture.cpp  VertexBuffers.cpp
AlkyoneRenderEngine/Source/Components/Colliders/: AxisAlignedBoundingBox.cpp  BoundingBox.cpp
AlkyoneRenderEngine/Source/Components/LightComponents/: DirectionalLightComponent.cpp  PointLightComponent.cpp
AlkyoneRenderEngine/Source/Components/RenderComponents/: StaticMeshComponent.cpp  StaticMeshGroup.cpp
AlkyoneRenderEngine/Source/Core/: Editor.cpp  Engine.cpp  Time.cpp
AlkyoneRenderEngine/Source/GameWorld/: Pawn.cpp  World.cpp
AlkyoneRenderEngine/Source/Managers/: GUIManager.cpp  InputManager.cpp  LogManager.cpp  RenderManager.cpp  SceneManager.cpp  ShaderManager.cpp  WindowManager.cpp
AlkyoneRenderEngine/Source/Utilities/: Archive.cpp  Array.inl  AssetLoader.cpp  PrimitiveShapes.cpp
AlkyoneRenderEngine/Source/Utilities/Parsers/: JsonParser.cpp
AlkyoneRenderEngine/Source/Utilities/TestData/: TestData.h
Containers/: Containers.vcxproj  Containers.vcxproj.filters  main.cpp
Containers/Containers/: Array.h  EpicArrayPreview.cpp  Map.h  Source.cpp  new_array.h  temp.h
Containers/Containers/Utilities/: Configuration.h  PODTypes.h  Utilities.h
Engine-core/: Engine-core.vcxproj  Engine-core.vcxproj.filters  Engine.props  TODO.cpp  cpp.hint
Engine-core/Assets/: ball.asset  cart.asset  cube.asset  plane.asset  vase.asset
Engine-core/Dependencies/Includes/Public/: Archive.h  Engine_Helper.h  Event.h  FileUtilities.h  Input.h  Object.h  ObjectInitializer.h  ObjectMacros.h  Utilities.h  camera.h
Engine-core/Scripts/: ReflectionScript.h
Engine-core/Shaders/: fragmentshader.fs  pointlight.fs  simpleFrag.frag  simpleVertex.vert  vertexshader.vs  withlightsandstuff.fs
Engine-core/Source/: Object.cpp  main.cpp
Engine-core/Source/Core/: Engine.cpp
Engine-core/Source/Core/Init/: Init.cpp  InitGLFW.cpp  InitGlew.cpp
Engine-core/Source/Core/Managers/: LogManager.cpp
Engine-core/Source/GameWorld/: Actor.cpp  Scene.cpp
Engine-core/Source/GameWorld/Components/: Components.cpp
Engine-core/Source/Globals/: Globals.cpp  ObjectRegister.cpp  TypeRegister.cpp
Engine-core/Source/RenderEngine/: Lights.cpp  Material.cpp  Model.cpp  Shader.cpp  StaticMesh.cpp  Text.cpp
Engine-core/Source/RenderEngine/Components/: FBORenderTarget.cpp  RenderTarget.cpp  RenderWindow.cpp  Texture.cpp  VertexArrayBuffer.cpp
Engine-core/Source/RenderEngine/Managers/: RenderManager.cpp  ShaderManager.cpp  WindowManager.cpp
Engine-core/Source/Unreal files/TowerDefense/: Entity.generated.h  Hero.generated.h  HeroController.generated.h  PawnMovement.generated.h  Projectile.generated.h  Structure.generated.h  Timestamp  Tower.generated.h  (+4 more)
Engine-core/Source/Utilities/: Archive.cpp
Engine-core/Tools/: classes  reflect.bat
Math/: CMakeLists.txt  Math.vcxproj  Math.vcxproj.filters  Quat.cpp  main.cpp  raytracer.cpp
Math/Dependencies/Includes/: GenericMath.h  Matrix4.h  ParabolaMath.h  Quat.h  SSEMath.h  Types.h  Vector2.h  Vector3.h  Vector4.h
Math/Dependencies/Includes/Shapes/: Sphere.h
Math/Source/: Matrix4.inl  Vector2.inl  Vector3.inl  Vector4.inl
(+123 files in other folders)
